k8s/zicops-notification-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zicops-notification-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /ns/?(.*)
            pathType: Prefix  
            backend:
              service:
                name: zicops-notification-server
                port:
                  number: 80
